--- a/src/components/item.css
+++ b/src/components/item.css
@@ -6,7 +6,7 @@
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
-    background-color: brown;
+    background-color: rgb(23, 71, 245);
 }
 
 p{
